# simpleLQCD

./: CMakeLists.txt  README
include/: dirac.h  global.h  init.h  linalg.h  random.h  su3.h
main/: main.c  main_ptsource.c  main_random.c  test.8.cfg
modules/: CMakeLists.txt  dirac.c  init.c  linalg.c  random.c
